@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.nrk"
        name="NRK Nett-TV"
-       version="4.6.1"
+       version="4.7.0"
        provider-name="takoi">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
